Project

General

Profile

Actions

Bug #24072

closed

mds: race with new session from connection and imported session

Added by Patrick Donnelly about 6 years ago. Updated almost 5 years ago.

Status:
Resolved
Priority:
Urgent
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Support
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
crash
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

 ceph version 12.2.1-40.el7cp (c6d85fd953226c9e8168c9abe81f499d66cc2716) luminous (stable)
 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x110) [0x55fb76416b40]
 2: (SessionMap::add_session(Session*)+0x484) [0x55fb763596c4]
 3: (Server::handle_client_session(MClientSession*)+0x15bf) [0x55fb761477bf]
 4: (Server::dispatch(Message*)+0x3cb) [0x55fb76186f6b]
 5: (MDSRank::handle_deferrable_message(Message*)+0x804) [0x55fb760fe974]
 6: (MDSRank::_dispatch(Message*, bool)+0x1e3) [0x55fb7610bd43]
 7: (MDSRankDispatcher::ms_dispatch(Message*)+0x15) [0x55fb7610cb85]
 8: (MDSDaemon::ms_dispatch(Message*)+0xf3) [0x55fb760f6023]
 9: (DispatchQueue::entry()+0x792) [0x55fb766fac12]
 10: (DispatchQueue::DispatchThread::entry()+0xd) [0x55fb7649cfbd]
 11: (()+0x7e25) [0x7f857ee72e25]
 12: (clone()+0x6d) [0x7f857df5534d]
 NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.

BZ: https://bugzilla.redhat.com/show_bug.cgi?id=1572555


Related issues 1 (0 open1 closed)

Copied to CephFS - Backport #24130: luminous: mds: race with new session from connection and imported sessionResolvedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly almost 6 years ago

  • Status changed from New to In Progress
Actions #3

Updated by Patrick Donnelly almost 6 years ago

  • Status changed from In Progress to Pending Backport
Actions #4

Updated by Patrick Donnelly almost 6 years ago

  • Copied to Backport #24130: luminous: mds: race with new session from connection and imported session added
Actions #5

Updated by Patrick Donnelly almost 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF